align fix

--- a/css/photography.css
+++ b/css/photography.css
@@ -42,17 +42,17 @@
 }
 
 .img-left {
-  padding-left: 4% ;
-  padding-right: .5%;
-  padding-top: .5%;
-  padding-bottom: .5%;
+  padding-left: 2% ;
+  padding-right: 2%;
+  padding-top: .25%;
+  padding-bottom: .25%;
 }
 
 .img-right {
-  padding-left: .5%;
-  padding-right: 4%;
-  padding-top: .5%;
-  padding-bottom: .5%;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: .25%;
+  padding-bottom: .25%;
 }
 .img-mid {
   padding-left: 2%;
@@ -108,4 +108,26 @@
   bottom: 8px;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@media only screen and (min-width: 40em) {
+  .img-left {
+    padding-left: 4% ;
+    padding-right: .5%;
+    padding-top: .5%;
+    padding-bottom: .5%;
+  }
+
+  .img-right {
+    padding-left: .5%;
+    padding-right: 4%;
+    padding-top: .5%;
+    padding-bottom: .5%;
+  }
+  .img-mid {
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: .25%;
+    padding-bottom: .25%;
+  }
 }
